[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/screens/log_in_module/registration/register.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/ui/theme_1.tres" type="Theme" id=3]
[ext_resource path="res://src/ui/back_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/red_cancel.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/black_cancel.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.164706, 0.470588, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="elements" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -273.22
margin_right = 271.0
margin_bottom = -207.22
custom_fonts/font = SubResource( 1 )
text = "Creating New Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_label" type="Label" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.469
margin_top = -174.219
margin_right = -213.469
margin_bottom = -130.219
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email_label" type="Label" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.568
margin_top = -73.1348
margin_right = -212.568
margin_bottom = -29.1348
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Email"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_label" type="Label" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.518
margin_top = 17.2
margin_right = -213.518
margin_bottom = 61.2
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_label2" type="Label" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -346.993
margin_top = 91.8281
margin_right = -211.993
margin_bottom = 170.828
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.458824, 0.168627, 1 )
text = "Re-Enter
Password"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.661
margin_top = -178.219
margin_right = 317.339
margin_bottom = -126.219
custom_fonts/font = SubResource( 3 )
placeholder_text = "Enter Name Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="email" type="LineEdit" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.134
margin_top = -82.6964
margin_right = 317.866
margin_bottom = -30.6964
custom_fonts/font = SubResource( 3 )
placeholder_text = "Enter Email Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password" type="LineEdit" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.134
margin_top = 8.59045
margin_right = 317.866
margin_bottom = 60.5905
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Enter Password Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password2" type="LineEdit" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -193.134
margin_top = 108.182
margin_right = 317.866
margin_bottom = 160.182
custom_fonts/font = SubResource( 3 )
secret = true
placeholder_text = "Re-Enter Password Here"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="elements"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.0
margin_top = 189.227
margin_right = 148.0
margin_bottom = 273.227
theme = ExtResource( 3 )
text = "Create Account"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="account_creation" type="HTTPRequest" parent="elements"]

[node name="document_creation" type="HTTPRequest" parent="elements"]

[node name="error_pane" type="ColorRect" parent="elements"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.92549, 0.113725, 0.113725, 0.0627451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="elements/error_pane"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -293.5
margin_top = -118.0
margin_right = 293.5
margin_bottom = 118.0
color = Color( 0.898039, 0.168627, 0.168627, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_msg" type="Label" parent="elements/error_pane/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.5
margin_top = -84.5
margin_right = 209.5
margin_bottom = 84.5
custom_fonts/font = SubResource( 4 )
text = "Passwords Do not Match. Please Re-enter Information"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="error_cancel_button" type="TouchScreenButton" parent="elements/error_pane/ColorRect"]
position = Vector2( 528.008, -33.2978 )
scale = Vector2( 0.178, 0.178 )
normal = ExtResource( 6 )

[node name="success_pane" type="ColorRect" parent="elements"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0862745, 0.494118, 0.0392157, 0.431373 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="elements/success_pane"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -293.5
margin_top = -118.0
margin_right = 293.5
margin_bottom = 118.0
color = Color( 0.211765, 0.819608, 0.317647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="elements/success_pane/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -247.0
margin_top = -24.5
margin_right = 247.0
margin_bottom = 24.5
custom_fonts/font = SubResource( 4 )
text = "Account Successfully Created"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="success_cancel_button" type="TouchScreenButton" parent="elements/success_pane/ColorRect"]
position = Vector2( 535.143, -29.7302 )
scale = Vector2( 0.178, 0.178 )
normal = ExtResource( 5 )

[node name="loading" type="ColorRect" parent="elements"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -293.5
margin_top = -118.0
margin_right = 293.5
margin_bottom = 118.0
color = Color( 0.980392, 0.921569, 0.0431373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="msg" type="Label" parent="elements/loading"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -102.5
margin_top = -22.0
margin_right = 102.5
margin_bottom = 22.0
custom_fonts/font = SubResource( 4 )
text = "Loading...."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" parent="elements" instance=ExtResource( 4 )]
scale = Vector2( 0.244, 0.244 )
scene_path = "res://src/screens/start_up_screen.tscn"

[node name="email_cover" type="ColorRect" parent="elements"]
visible = false
margin_right = 511.0
margin_bottom = 52.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password_cover" type="ColorRect" parent="elements"]
visible = false
margin_right = 511.0
margin_bottom = 52.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="password2_cover" type="ColorRect" parent="elements"]
visible = false
margin_right = 511.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="focus_entered" from="elements/name" to="." method="_on_name_focus_entered"]
[connection signal="focus_entered" from="elements/email" to="." method="_on_email_focus_entered"]
[connection signal="focus_entered" from="elements/password" to="." method="_on_password_focus_entered"]
[connection signal="focus_entered" from="elements/password2" to="." method="_on_password2_focus_entered"]
[connection signal="button_up" from="elements/Button" to="." method="_on_Button_button_up"]
[connection signal="request_completed" from="elements/account_creation" to="." method="_on_account_creation_request_completed"]
[connection signal="request_completed" from="elements/document_creation" to="." method="_on_document_creation_request_completed"]
[connection signal="pressed" from="elements/error_pane/ColorRect/error_cancel_button" to="." method="_on_error_cancel_button_pressed"]
[connection signal="pressed" from="elements/success_pane/ColorRect/success_cancel_button" to="." method="_on_TouchScreenButton_pressed"]
